--- a/src/css/bases/reset.css
+++ b/src/css/bases/reset.css
@@ -39,10 +39,19 @@ img {
   max-width: 100%;
 }
 
+input {
+  box-sizing: border-box;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+textarea {
+  resize: none;
+  box-sizing: border-box;
 }
 
 i {
