Refactor to use CSS Modules

--- a/src/css/layouts/base-layout.css
+++ b/src/css/layouts/base-layout.css
@@ -2,7 +2,7 @@
 
 @import "../bases/color.css";
 
-.guest-container {
+.layout {
   background-color: var(--backgroundColor);
   display: flex;
   min-height: 100vh;
