--- a/src/css/layouts/base-layout.css
+++ b/src/css/layouts/base-layout.css
@@ -1,9 +1,12 @@
 @charset "utf-8";
 
 @import "../bases/color.css";
+@import "../bases/font.css";
 
 .layout {
-  background-color: var(--backgroundColor);
+  background-color: var(--background-color);
+  font-family: var(--primary-font-family);
+
   display: flex;
   min-height: 100vh;
   flex-direction: column;
